--- a/index.html
+++ b/index.html
@@ -420,6 +420,11 @@
         </div>
     </section>
 
+    <div class="row">
+        <div class="text-center">
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti et commodi iste quia nisi labore quidem reprehenderit velit nam ex.</p>
+        </div>
+    </div> 
 
     <section id="footer" class="bg-dark">
         <div class="container-xl">
